Footer Fix
Footer was overlapping the content - removed the position: sticky from rules... Also adjusted line height in paragraphs.

--- a/css/fullscreenvid.css
+++ b/css/fullscreenvid.css
@@ -106,7 +106,7 @@ body {
 }
 
 p {
-  line-height: 1;
+  line-height: 2;
 
 }
 
@@ -141,11 +141,6 @@ p {
 
 
 /* --------- FOOTER STYLES ---------*/
-
-footer {
-  position: sticky;
-  padding-top: 25px;
-}
 
 .contact-section {
   width: 100%;
